# alpha-assay

./: .env.secrets.example  .gitignore  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: sma_crossover.yaml
dashboard/: __init__.py  app.py  loaders.py  metrics.py
data/samples/: es_tick_add_1m.csv
docs/: coding-standards.md  go-live-checklist.md  guardrails.md  metrics-and-eval.md
examples/: sma_crossover.py
infra/alerts/: Dockerfile  main.py
infra/dashboard/: Dockerfile
infra/paper-trader/: Dockerfile
observability/: prometheus.yml
scripts/: databento_bulk_pull.py  databento_concat.py  databento_smoke_pull.py  paper_dryrun.py  paper_trader_stub.py
src/alpha_assay/: __init__.py
tests/: test_backfill_chunking.py  test_breadth_recorder.py  test_breadth_recorder_compose.py  test_cli_backfill.py  test_cli_backtest.py  test_cli_backtest_with_breadth.py  test_cli_report.py  test_compose_stack.py  test_config_loader.py  test_csv_replay.py  test_dashboard_loaders.py  test_dashboard_metrics.py  test_data_joined_loader.py  test_databento_adapter.py  test_databento_bulk_pull.py  test_databento_concat.py  test_databento_smoke_pull.py  test_engine_bar_adapter.py  test_engine_breadth_adapter.py  test_engine_custom_data.py  test_engine_instrument_factory.py  test_engine_logging.py  test_engine_nautilus_runner.py  test_es_bars_recorder_compose.py  test_examples_sma.py  test_filters_atr_regime.py  test_filters_session_mask.py  test_filters_stop_run.py  test_ibkr_adapter.py  test_ibkr_adapter_async_callsite.py  test_ibkr_adapter_historical.py  test_ibkr_es_bars_recorder.py  test_ibkr_exec.py  test_makefile_targets.py  test_observability_metrics.py  test_paper_dryrun_unit.py  test_position_sizer.py  test_report_metrics.py  test_report_pairing.py  test_report_return_reconciliation.py  (+3 more)
tests/fixtures/: breadth_test_strategy.py  ibkr_bars_fixture.json  make_sample.py
tests/integration/: test_backtest_full.py  test_deterministic_replay.py  test_e2e_paper_dryrun.py  test_no_lookahead.py
(+41 files in other folders)
